# stm32-baremetal-framework

./: .gitignore  CMakeLists.txt  CMakePresets.json  main.c  main.cpp
cmake/: arm-gcc-toolchain.cmake
framework/: .gitignore  CMakeLists.txt
framework/board/blue_pill_temp_transmitter/: .mxproject  CMakeLists.txt  blue_pill_temp_transmitter.ioc  board_config.h.in
framework/board/blue_pill_temp_transmitter/Core/Inc/: board_gpio.h  main.h  stm32f1xx_it.h
framework/board/blue_pill_temp_transmitter/Core/Src/: main.c  spi.c  stm32f1xx_it.c  tim.c  usart.c
framework/board/stm32g071kb_temp_transmitter/: .mxproject  STM32G071XX_FLASH.ld  stm32g071kb_temp_transmitter.ioc
framework/board/stm32g071kb_temp_transmitter/Core/Src/: gpio.c  main.c  spi.c  usart.c
framework/cmake/: CMakePresets.json  clang-arm-toolchain.cmake
framework/core/: CMakeLists.txt
framework/core/include/: hss_types.h
framework/drivers/: CMakeLists.txt
framework/drivers/analog_devices_no_os/: CMakeLists.txt
framework/drivers/max31865/: CMakeLists.txt
framework/middleware/: CMakeLists.txt
framework/middleware/freemodbus/: CMakeLists.txt
framework/middleware/freemodbus/include/: port.h
framework/middleware/freemodbus/src/: portcritical.c  portevent.c  portserial.c  porttimer.c
framework/middleware/modbus/: CMakeLists.txt
framework/middleware/modbus/include/: hss_modbus.h
framework/middleware/modbus/src/: modbus.c
framework/platform/: CMakeLists.txt
framework/platform/include/: hss_dma.h  hss_gpio.h  hss_irq.h  hss_platform.h  hss_time.h  hss_timer.h  hss_uart.h
framework/platform/src/: dma.c  gpio.c  irq.c  platform.c  time.c  timer.c  uart.c
framework/tools/debug/: debug_demo_firmware.bat
framework/tools/openocd/: flash_demo_firmware.bat
framework_v2/: CMakeLists.txt  CMakelists.txt  README.md
framework_v2/board/: CMakeLists.txt
framework_v2/board/blue_pill_temp_transmitter/: CMakeLists.txt
framework_v2/board/bluepill_f103/: CMakeLists.txt  board_config.cmake
framework_v2/board/bluepill_f103/include/: board.h
framework_v2/board/bluepill_f103/src/: board.c  startup_stm32f103c8tx.s
framework_v2/board/stm32g071kb_temp_transmitter/: CMakeLists.txt
framework_v2/cmake/: hss_fw.cmake
framework_v2/core/: CMakeLists.txt
framework_v2/drivers/: CMakeLists.txt
framework_v2/mcu/: CMakeLists.txt
framework_v2/mcu/stm32f1/: CMakeLists.txt
framework_v2/mcu/stm32f1/include/: mcu.h  stm32f1xx_hal_conf.h
framework_v2/mcu/stm32f1/linker/: stm32f1.ld.in
framework_v2/mcu/stm32f1/src/: mcu_init.c  stm32f1xx_it.c  syscalls.c
framework_v2/mcu/stm32f103xb/: CMakeLists.txt
framework_v2/mcu/stm32g0/: CMakeLists.txt
framework_v2/mcu/stm32g071kb/: CMakeLists.txt
framework_v2/mcu_family/: CMakeLists.txt
framework_v2/mcu_family/stm32f1/: CMakeLists.txt
framework_v2/middleware/: CMakeLists.txt
framework_v2/platform/: CMakeLists.txt
framework_v2/tools/debug/: debug_my_app.bat
